--- a/cvsecond.html
+++ b/cvsecond.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h2><u> CURRICULUM VITAE</u></h2>
-		<a href="file:///C:/xampp/htdocs/firstxampp/Mywebsite/carte_visite_GL.pdf" class="btn btn-default pull-right" title="Download CV as PDF" id="down">Download CV</a>
+		<a href="carte_visite_GL.pdf" class="btn btn-default pull-right" title="Download CV as PDF" id="down">Download CV</a>
 		<table bgcolor ="" cellspacing="12" align="center"  id="tabl">
 		<tr >
 		<u><th align="center" width="400" cellspacing ="3" id="titre"><label ><div class="b"><u>INGENIEUR DE FORMATION EN GENIE LOGICIEL</u> </div></label></th></u>
