--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <diV class="reseau_so">
         <a href="https://web.facebook.com/"><img src="facebookicon1.png" alt="facebook" width="45px" height="45px" /></a>
         <a href=""><img src="telegramicon.png" alt="telegram icon" width="45px" height="45px" /></a>
-        <a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin"><img src="gmail.png" alt="gmail icon" width="45px" height="45px" /></a>
+        <a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=AddSession"><img src="gmail.png" alt="gmail icon" width="45px" height="45px" /></a>
         <a href="https://github.com/DavidFORGO?tab=repositories"><img src="github.png" alt="github icon" width="45px" height="45px" /></a>
     </diV>
     <div id="contact">
